--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+allennlp==2.8.0
 clip==1.0
+joblib==1.1.0
 matplotlib==3.4.3
 networkx==2.6.3
 numpy==1.21.4
@@ -7,8 +9,8 @@ Pillow==8.4.0
 scikit_image==0.18.3
 sentence_transformers==2.1.0
 skimage==0.0
-spacy==3.2.0
+spacy==3.1.4
 textacy==0.11.0
-torch==1.10.0
+torch==1.9.1
 tqdm==4.62.3
-transformers==4.12.3
+transformers==4.5.1
